# DriftGuard

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml
.github/workflows/: ci.yml
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AgentStatus.tsx  DriftChart.tsx  EventLog.tsx  PheromoneMonitor.tsx  PortfolioBalance.tsx  PortfolioConfig.tsx  TradeHistory.tsx
dashboard/src/components/controls/: ControlPanel.tsx
dashboard/src/components/layout/: DashboardLayout.tsx  MetricCard.tsx
dashboard/src/hooks/: useWebSocket.ts
src/: main.rs
src/agents/: analyst.rs  guardian.rs  mod.rs  sensor.rs  trader.rs
src/core/: blackboard.rs  config.rs  mod.rs  physics.rs
src/market/: alpha_vantage.rs  mod.rs
src/server/: handler.rs  mod.rs
