[package]
name = "driftguard"
version = "0.1.0"
edition = "2021"
description = "Stigmergic Portfolio Stabilizer - Antifragile swarm intelligence for automated rebalancing"
authors = ["DriftGuard Team"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client for market data
reqwest = { version = "0.11", features = ["json"] }

# Async trait for agents
async-trait = "0.1"

# WebSocket server for dashboard
warp = "0.3"
futures = "0.3"
tokio-stream = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[features]
integration = []
